tests/should_fail/type_nested_field_wrong_type.nv
module type_nested_field_wrong_type
// SHOULD FAIL: assigning wrong type to nested struct field
struct Inner {
    val: Int,
}
struct Outer {
    inner: Inner,
}

let o = Outer { inner: Inner { val: 5 } }
o.inner.val = "not an int"
